100-vllm/vllm-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-serve-svc
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/app-metrics: "true"
    prometheus.io/port: "8000"
  labels:
    model: mistral
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    model: mistral
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mistral
  labels:
    model: mistral
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      model: mistral
  template:
    metadata:
      labels:
        model: mistral
    spec:
      serviceAccountName: model-storage-sa
      tolerations:
        - effect: NoSchedule
          key: nvidia.com/gpu
          operator: Exists
      nodeSelector:
        karpenter.sh/nodepool: gpu
      containers:
        - name: vllm
          image: public.ecr.aws/deep-learning-containers/vllm:0.21.0-gpu-py312-cu130-ubuntu22.04-ec2-v1.0-soci
          imagePullPolicy: IfNotPresent
          args:
            - '--port=8000'
            - '--model=s3://genai-models-156041407568/Ministral-3-8B-Instruct-2512/'
            - '--served-model-name=ministral'
            - '--load-format=runai_streamer'
            - '--model-loader-extra-config={"concurrency":16}'
            - '--tokenizer_mode=mistral'
            - '--trust-remote-code'
            - '--gpu_memory_utilization=0.90'
            - '--max-model-len=8192'
            - '--tensor-parallel-size=1'
            - '--max-num-batched-tokens=8192'
            - '--max-num-seqs=256'
            - '--block-size=16'
            - '--enforce-eager'
            - '--disable-custom-all-reduce'
            - '--config-format=mistral'
            - '--enable-auto-tool-choice'
            - '--tool-call-parser=mistral'
          ports:
            - containerPort: 8000
              protocol: TCP
              name: http
          readinessProbe:
            httpGet:
              path: /v1/models
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 2
              memory: 16Gi
              nvidia.com/gpu: 1
            limits:
              cpu: 4
              memory: 28Gi
              nvidia.com/gpu: 1
